zebra-grpc/src/tests/snapshots/get_info@mainnet.snap
---
source: zebra-grpc/src/tests/snapshot.rs
expression: info
---
{
  "min_sapling_birthday_height": 419200
}
