zebra-grpc/src/tests/snapshots/get_info@testnet.snap
---
source: zebra-grpc/src/tests/snapshot.rs
expression: info
---
{
  "min_sapling_birthday_height": 280000
}
