zebra-grpc/src/tests/snapshots/get_results@testnet.snap
---
source: zebra-grpc/src/tests/snapshot.rs
expression: results
---
{
  "results": {
    "zxviews1q0duytgcqqqqpqre26wkl45gvwwwd706xw608hucmvfalr759ejwf7qshjf5r9aa7323zulvz6plhttp5mltqcgs9t039cx2d09mgq05ts63n8u35hyv6h9nc9ctqqtue2u7cer2mqegunuulq2luhq3ywjcz35yyljewa4mgkgjzyfwh6fr6jd0dzd44ghk0nxdv2hnv4j5nxfwv24rwdmgllhe0p8568sgqt9ckt02v2kxf5ahtql6s0ltjpkckw8gtymxtxuu9gcr0swvz": {
      "by_height": {
        "0": {
          "transactions": [
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            },
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            },
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            }
          ]
        },
        "1": {
          "transactions": [
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            },
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            },
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            }
          ]
        },
        "2147483647": {
          "transactions": [
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            },
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            },
            {
              "hash": "0000000000000000000000000000000000000000000000000000000000000000"
            }
          ]
        }
      }
    }
  }
}
